...
        android:background="@drawable/fade_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title_field"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_edit_text"
...
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        </LinearLayout>

        <EditText
            android:id="@+id/notes_field"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_edit_text"
...
