<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/decline_entry"
        android:title=""
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_close_24"
        />

    <item
        android:id="@+id/accept_entry"
        android:title=""
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_check_24"
        />
</menu>