<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cancel_editing_entry"
        android:icon="@drawable/ic_baseline_close_24"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accept_entry"
        android:icon="@drawable/ic_baseline_check_24"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_entry"
        android:title=""
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_delete_24"
        />
</menu>